style.css
body {
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    background-color: black;
    background-image: url("images/backgroundImage.jpg");
    background-repeat: no-repeat;
    background-size: cover;
  }
  
  ::-webkit-scrollbar {
    display: none;
}



  header {
    background-color: #333;
    color: #fff;
    padding: 10px;
    text-align: right;
    position: fixed;
    width: 100%;
    top: 0;
  }
  
  .headerLinks {
    text-decoration: none;
    font-weight: 800;
    font-size: 20px;
    padding: 10px;
    background-color: #333;
    color: #fff;
    border: none;
    cursor: pointer;
  }
  
  .content {
    padding-top: 80px;
    max-width: 800px;
    margin: 0 auto;
  }

  .homeDiv {
    padding-top: 100px;
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
  }
  
  .homeMyName {
    font-size: 56px;
    padding-bottom: 20px
  }
  
  .homeMyPicture {
    display: inline;
    max-width: 30%;
    border-radius: 50%;
  }
  
  nav ul {
    color: #fff;
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  
  nav ul li {
    display: inline;
    margin-right: 10px;
  }
  
  
  h1 {
    font-size: 32px;
    color: #fff;
  }
  
  h2 {
    font-size: 24px;
    color: #fff;
  }
  
  h3 {
    font-size: 18px;
    color: #fff;
  }
  
  ul {
    list-style-type: disc;
    color: #fff;
  }
  
  a {
    color: #fff;
    text-decoration: none;
  }
  
  p {
    color: #fff;
  }

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #444;
  min-width: 60px;
}

.dropdown-content a {
  padding: 12px 16px;
  color: white;
  text-decoration: none;
  display: block;
}

.dropdown-content a:hover {background-color: #222;}

.dropdown:hover .dropdown-content {display: block;}

.dropdown:hover .dropbtn {background-color: #222;}

@media (max-width: 768px) {
  body {
    background-image: none;
  }
  .headerLinks {
    font-size: 14px;
    padding: 10px 1px;
  }
}

